Bug 505495 - Night Color on wayland does not tint properly
Summary: Night Color on wayland does not tint properly
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: night color (other bugs)
Version First Reported In: 6.3.5
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: wayland-only
: 505434 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-06-12 00:43 UTC by somepurposething
Modified: 2026-03-28 06:24 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.2
Sentry Crash Report:
kdedev: NVIDIA+


Attachments
Video of broken behaviour (3.70 MB, video/mp4)
2025-06-12 00:43 UTC, somepurposething
Details
Good behaviour (1.85 MB, video/mp4)
2025-06-12 00:48 UTC, somepurposething
Details

Note You need to log in before you can comment on or make changes to this bug.
Description somepurposething 2025-06-12 00:43:56 UTC
Created attachment 182205 [details]
Video of broken behaviour

SUMMARY
The night color tint is appearing as a whitish red rather than something actually warm, this hurts my eyes so it goes against the entire point of the feature.

STEPS TO REPRODUCE
1. Use Wayland
2. Enable Night Color

OBSERVED RESULT
Whitish tint that made things look weird and my eyes tired

EXPECTED RESULT
More red/orange tint

SOFTWARE/OS VERSIONS
Operating System: EndeavourOS 
KDE Plasma Version: 6.3.5
KDE Frameworks Version: 6.14.0
Qt Version: 6.9.1
Kernel Version: 6.15.1-arch1-2 (64-bit)
Graphics Platform: X11
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 15.5 GiB of RAM
Graphics Processor: NVIDIA GeForce GTX 1050

ADDITIONAL INFO
Forgive the handcam video, OBS didn't capture Night Color tint anymore and I couldn't figure out how to force it to.
Comment 1 somepurposething 2025-06-12 00:48:01 UTC
Created attachment 182206 [details]
Good behaviour

Here is handcam footage of X11 behavior, which has not changed
Comment 2 TraceyC 2025-06-13 20:09:33 UTC
Thanks for the bug report and the videos. No worries about them being taken with a hand cam, it's better than no video! The recordings help to see the difference between Wayland and X11. In your Wayland session, I noticed in particular that the menus on the left of the Settings have a noticeable pink tint, where on X11 everything is orange tinted as expected.


Notes from the video:
Dark global theme

Testing started with
Single HDMI display 1920x1080 (16:9) @100% 75Hz
No color profile
Color accuracy: Prefer efficiency
100% brightness

The settings are then changed between
Color profile - ICC Profile (no file chosen) - no change
Built-in - color temp reverts to normal (no warming)
Changes reverted, went back to None, bug persisted

===

I tested on a Fedora VM, with the Breeze Dark theme and purple highlight. I was not able to replicate the bug there
This is probably related to the video drivers. Are you using the proprietary nvidia drivers? If so, which version?
Comment 3 somepurposething 2025-06-15 11:46:52 UTC
I am currently using 575.57.08
Comment 4 TraceyC 2025-06-16 21:33:28 UTC
Thanks for that. Can you run this and paste the output into  a reply?

kscreen-doctor -o

I was unable to reproduce this on a laptop with an nvidia GPU running git-master, nvidia driver 
570.153.02

Operating System: Solus 4.7
KDE Plasma Version: 6.4.80
KDE Frameworks Version: 6.16.0
Qt Version: 6.9.1
Kernel Version: 6.14.6-319.current (64-bit)
Graphics Platform: Wayland
Processors: 16 × 11th Gen Intel® Core™ i7-11800H @ 2.30GHz
Memory: 64 GiB of RAM (62.5 GiB usable)
Graphics Processor 1: Intel® UHD Graphics
Graphics Processor 2: NVIDIA GeForce RTX 3060 Laptop GPU


I'll let the kwin contributors take a deeper look
Comment 5 TraceyC 2025-06-20 14:57:40 UTC
*** Bug 505434 has been marked as a duplicate of this bug. ***
Comment 6 TraceyC 2025-06-20 14:59:01 UTC
Can I ask you to test this again when EndeavourOS updates to Plasma 6.4.0? There was significant work done in color processing. Thanks.
Comment 7 somepurposething 2025-06-21 10:55:35 UTC
Same behavior.
Also, using built-in does not return the temp to normal, rather it just dims my display.

kinfo

Operating System: EndeavourOS 
KDE Plasma Version: 6.4.0
KDE Frameworks Version: 6.15.0
Qt Version: 6.9.1
Kernel Version: 6.15.2-arch1-1 (64-bit)
Graphics Platform: X11
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 16 GiB of RAM (15.5 GiB usable)
Graphics Processor: NVIDIA GeForce GTX 1050


kscreen-doctor -o 

Output: 444 DVI-D-0 
        disabled
        disconnected
        priority 0
        DVI
        replication source:0
        Modes: 
        Geometry: 0,0 0x0
        Scale: 1
        Rotation: 1
        Overscan: 0
        Vrr: incapable
        RgbRange: unknown
        HDR: incapable
        Wide Color Gamut: incapable
        ICC profile: incapable
        Color profile source: incapable
        Brightness control: unsupported
        Color resolution: unknown
        Allow EDR: unsupported
Output: 445 HDMI-0 
        enabled
        connected
        priority 1
        HDMI
        replication source:0
        Modes:  446:1920x1080@60!  447:1920x1080@75*  448:1920x1080@60  449:1920x1080@50  450:1920x1080@60  451:1920x1080@50  452:1680x1050@60  453:1600x1200@60  454:1600x900@60  455:1440x900@60  456:1366x768@60  457:1360x768@60  458:1280x1024@60  459:1280x960@60  460:1280x800@60  461:1280x720@60  462:1280x720@60  463:1280x720@50  464:1024x768@75  465:1024x768@70  466:1024x768@60  467:800x600@75  468:800x600@60  469:800x600@56  470:720x576@50  471:720x480@60  472:640x480@75  473:640x480@60 
        Geometry: 0,0 1920x1080
        Scale: 1
        Rotation: 1
        Overscan: 0
        Vrr: incapable
        RgbRange: unknown
        HDR: incapable
        Wide Color Gamut: incapable
        ICC profile: incapable
        Color profile source: incapable
        Brightness control: unsupported
        Color resolution: unknown
        Allow EDR: unsupported
Output: 474 DP-0 
        disabled
        disconnected
        priority 0
        DisplayPort
        replication source:0
        Modes: 
        Geometry: 0,0 0x0
        Scale: 1
        Rotation: 1
        Overscan: 0
        Vrr: incapable
        RgbRange: unknown
        HDR: incapable
        Wide Color Gamut: incapable
        ICC profile: incapable
        Color profile source: incapable
        Brightness control: unsupported
        Color resolution: unknown
        Allow EDR: unsupported
Output: 475 DP-1 
        disabled
        disconnected
        priority 0
        DisplayPort
        replication source:0
        Modes: 
        Geometry: 0,0 0x0
        Scale: 1
        Rotation: 1
        Overscan: 0
        Vrr: incapable
        RgbRange: unknown
        HDR: incapable
        Wide Color Gamut: incapable
        ICC profile: incapable
        Color profile source: incapable
        Brightness control: unsupported
        Color resolution: unknown
        Allow EDR: unsupported
Comment 8 TraceyC 2025-06-23 17:47:49 UTC
Well, bummer. Thanks for the extra details. I'll let a more experienced developer take a look from here.
Also, hopefully someone else can reproduce this.
Comment 9 Bug Janitor Service 2025-06-25 21:25:07 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/7825
Comment 10 Zamundaaa 2025-06-26 12:09:25 UTC
Git commit 29dc8ee4cacb6372c0d93c784a18059158b6f1b9 by Xaver Hugl.
Committed on 26/06/2025 at 11:49.
Pushed by zamundaaa into branch 'master'.

backends/drm: allow night light to get closer to the edges of the gamut

The limit changes the result vs. 6.2 / kwin_x11. 0.0001 is enough to prevent the
math from going crazy, and changes the result a lot less.

M  +3    -3    src/backends/drm/drm_output.cpp

https://invent.kde.org/plasma/kwin/-/commit/29dc8ee4cacb6372c0d93c784a18059158b6f1b9
Comment 11 Zamundaaa 2025-06-26 15:14:25 UTC
Git commit 98b64e9bff63fb7742a260f3f83b78cba3605c92 by Xaver Hugl, on behalf of Xaver Hugl.
Committed on 26/06/2025 at 14:53.
Pushed by zamundaaa into branch 'Plasma/6.4'.

backends/drm: allow night light to get closer to the edges of the gamut

The limit changes the result vs. 6.2 / kwin_x11. 0.0001 is enough to prevent the
math from going crazy, and changes the result a lot less.


(cherry picked from commit 29dc8ee4cacb6372c0d93c784a18059158b6f1b9)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>

M  +3    -3    src/backends/drm/drm_output.cpp

https://invent.kde.org/plasma/kwin/-/commit/98b64e9bff63fb7742a260f3f83b78cba3605c92
Comment 12 somepurposething 2025-07-05 18:11:53 UTC
Issue persists, only now that the built-in profile looks purple-ish magenta rather than dimming the display.

Camera doesn't seem to even see it but I can, is there any way for me to actually record this?

kinfo

Operating System: EndeavourOS 
KDE Plasma Version: 6.4.2
KDE Frameworks Version: 6.15.0
Qt Version: 6.9.1
Kernel Version: 6.15.4-arch2-1 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 16 GiB of RAM (15.5 GiB usable)
Graphics Processor: NVIDIA GeForce GTX 1050
Comment 13 Zamundaaa 2026-01-22 14:26:04 UTC
Do you still see this in Plasma 6.5+?

(In reply to somepurposething from comment #12)
> Camera doesn't seem to even see it but I can, is there any way for me to
> actually record this?
If you have a colorimeter, you could measure it.
If not, set the camera to a fixed white balance, exposure and ISO, then you can take comparison images.
Comment 14 Bug Janitor Service 2026-02-06 03:50:36 UTC
🐛🧹 ⚠️ This bug has been in NEEDSINFO status with no change for at least 15 days. Please provide the requested information, then set the bug status to REPORTED. If there is no change for at least 30 days, it will be automatically closed as RESOLVED WORKSFORME.

For more information about our bug triaging procedures, please read https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging.

Thank you for helping us make KDE software even better for everyone!
Comment 15 Bug Janitor Service 2026-02-21 03:51:46 UTC
🐛🧹 This bug has been in NEEDSINFO status with no change for at least 30 days. Closing as RESOLVED WORKSFORME.
Comment 16 somepurposething 2026-03-28 06:24:10 UTC
Apologies, I completely forgot about this. It works properly now.
❯ kinfo
Operating System: EndeavourOS 
KDE Plasma Version: 6.6.3
KDE Frameworks Version: 6.24.0
Qt Version: 6.11.0
Kernel Version: 6.19.9-arch1-1 (64-bit)
Graphics Platform: X11
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 16 GiB of RAM (15.5 GiB usable)
Graphics Processor: NVIDIA GeForce GTX 1050