backends/drm: allow night light to get closer to the edges of the gamut

The limit changes the result vs. 6.2 / kwin_x11. 0.0001 is enough to prevent the
math from going crazy, and changes the result a lot less.

BUG: 505495