src/backends/drm/drm_output.cpp
@@ -450,9 +450,9 @@ static QVector3D adaptChannelFactors(const ColorDescription &originalColor, cons
     QVector3D adaptedChannelFactors = ColorDescription::sRGB.containerColorimetry().relativeColorimetricTo(originalColor.containerColorimetry()) * sRGBchannelFactors;
     // ensure none of the values reach zero, otherwise the white point might end up on or outside
     // the edges of the gamut, which leads to terrible glitches
-    adaptedChannelFactors.setX(std::max(adaptedChannelFactors.x(), 0.01f));
-    adaptedChannelFactors.setY(std::max(adaptedChannelFactors.y(), 0.01f));
-    adaptedChannelFactors.setZ(std::max(adaptedChannelFactors.z(), 0.01f));
+    adaptedChannelFactors.setX(std::max(adaptedChannelFactors.x(), 0.0001f));
+    adaptedChannelFactors.setY(std::max(adaptedChannelFactors.y(), 0.0001f));
+    adaptedChannelFactors.setZ(std::max(adaptedChannelFactors.z(), 0.0001f));
     return adaptedChannelFactors;
 }
 
